language/move-lang/tests/move_check/typing/assign_nested.exp
error: 

    ┌── tests/move_check/typing/assign_nested.move:10:13 ───
    │
 10 │         let x;
    │             ^ Unused local 'x'. Consider removing or prefixing with an underscore: '_x'
    │

error: 

    ┌── tests/move_check/typing/assign_nested.move:14:19 ───
    │
 14 │         (_, x, _, s.f) = four();
    │                   ^^^ Invalid assignment lvalue. Expected: a local, a field write, or a deconstructing assignment
    │

